// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CFormRange customize 1`] = `
<div>
  <input
    class="form-range bazinga"
    disabled=""
    max="150"
    min="20"
    readonly=""
    steps="2"
    type="range"
    value="80"
  />
</div>
`;

exports[`loads and displays CFormRange component 1`] = `
<div>
  <input
    class="form-range"
    steps="3"
    type="range"
  />
</div>
`;
